syntax = "proto3";

service UserService {
    rpc getAllUser (Empty) returns (UserList) {}
    rpc getUser (UserRequest) returns (UserResponse) {}
    rpc createUser (UserDetails) returns (UserResponse) {}
    rpc userLogin (LoginRequest) returns (LoginResponse) {}
}
message UserDetails {
    string name = 1;
    string email = 2;
    string password = 3;
}
message UserResponse {
    string _id = 1;
    string name = 2;
    string email = 3;
}
message UserRequest {
    string id = 1;
}
message LoginRequest {
    string email = 1;
    string password = 2;
}
message LoginResponse {
    string token = 1;
}
message Empty {

}

message UserList {
    repeated UserResponse users = 1;
}

