syntax = "proto3";

message FileResponse {
    string _id = 1;
    string name = 2;
    string folder = 3;
    string content = 4;
}

message FileList {
    repeated FileResponse files = 1;
 }

message FolderDetails {
    string name = 1;
    string user = 2;
}
message FolderResponse {
    string _id = 1;
    string name = 2;
}
message FolderByIdResponse {
    string _id = 1;
    string name = 2;
    repeated FileResponse files = 3;
}

message FolderRequest {
    optional string id = 1;
    optional string userId = 2;
}
message updateFolderRequest {
    string id = 1;
    string name = 2;
    string userId = 3;
}
message Empty {

}
message FolderList {
    repeated FolderResponse folders = 1;
 }
 message SuccessResponse {
    bool success = 1 ;
}
service FolderService {
    rpc getFolders (Empty) returns (FolderList) {}
    rpc getFoldersByUser(FolderRequest) returns (FolderList) {}
    rpc getFilesInFolder(FolderRequest) returns (FileList) {};
    rpc getFolder (FolderRequest) returns (FolderByIdResponse) {}
    rpc createFolder (FolderDetails) returns (FolderResponse) {}
    rpc updateFolder (updateFolderRequest) returns (FolderResponse) {}
    rpc deleteFolder (FolderRequest) returns (SuccessResponse) {}
}